--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,7 +4,7 @@
     <name>Spring Assistant</name>
     <!-- Will be auto populated by plugin -->
     <vendor email="dev@1ton.in" url="https://github.com/eltonsandre">
-        eltonsandre and Development Team @ 1Ton Technologies
+        eltonsandre, ydq and Development Team @ 1Ton Technologies
     </vendor>
 
     <!-- Will be auto populated by plugin -->
@@ -19,16 +19,20 @@
     <change-notes>
         <![CDATA[
         Fix and refactor:
-            - fix bugs and refactor build.gradle upgrade dependence versions
-            - upgrade JDK 11
-            - test: IntelliJ IDEA 2020.3.3 (Community Edition) Build #IC-203.xx
-          ]]>]
+         - new feature - link properties
+         - test: IntelliJ IDEA 2021.1 (Community Edition) Build #IC-211.xx
+        ]]>]
     </change-notes>
+
+    <depends>com.intellij.java</depends>
+    <depends>com.intellij.properties</depends>
 
     <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.platform</depends>
+
     <depends>org.jetbrains.plugins.yaml</depends>
-    <depends>com.intellij.properties</depends>
+
     <depends config-file="maven.xml" optional="true">org.jetbrains.idea.maven</depends>
     <depends config-file="gradle.xml" optional="true">com.intellij.gradle</depends>
     <!--    <depends config-file="gradle.xml" optional="true">org.jetbrains.plugins.gradle</depends>-->
@@ -39,8 +43,13 @@
     </extensionPoints>
 
     <extensions defaultExtensionNs="com.intellij">
+        <gotoDeclarationHandler implementation="in.oneton.idea.spring.assistant.plugin.link.LinkPropertiesKey"/>
+
         <completion.contributor language="yaml"
                                 implementationClass="in.oneton.idea.spring.assistant.plugin.suggestion.completion.YamlCompletionContributor"/>
+
+        <completion.contributor language="JAVA"
+                                implementationClass="in.oneton.idea.spring.assistant.plugin.suggestion.completion.AnnotationCompletionContributor"/>
 
         <completion.contributor language="Properties"
                                 implementationClass="in.oneton.idea.spring.assistant.plugin.suggestion.completion.PropertiesCompletionContributor"/>
